--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -8,28 +8,46 @@ buildPacks:
     gitURL: https://github.com/jenkins-x/jxr-packs-kubernetes.git
 cluster:
   chartRepository: http://bucketrepo/bucketrepo/charts/
-  clusterName: "kind"
+  clusterName: kind
   devEnvApprovers:
   - todo
-  environmentGitOwner: "todo"
+  environmentGitOwner: todo
   gitKind: github
   gitName: github
   gitServer: https://github.com
   namespace: jx
   provider: minikube
 environments:
-- key: dev
-  owner: ""
-  repository: ""
-- key: staging
-  owner: ""
-  repository: ""
-- key: production
-  owner: ""
-  repository: ""
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: dev
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: staging
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: production
 gitops: true
 ingress:
-  domain: ""
+  domain: 192.168.0.80.nip.io
   externalDNS: false
   namespaceSubDomain: -jx.
   tls:
